# T09_R01_C01_A01

./: README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
src/gwc/: __init__.py  cli.py  config.py  git_ops.py
tests/: test_cli.py
