[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "gwc"
version = "0.1.0"
description = "Git Workflow Companion — small, local-only git helpers"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = []

[project.scripts]
gwc = "gwc.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
